Develop (#5)
* added plugin covwrage

* modified travis.yml

* modified travis.yml

* fixed autotest run error